adsktbl: cat fix, ws nowrap tweak
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@4137 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -43,7 +43,7 @@ h2.ft_boxBodyUnfolded {background-image: url("chrome://foxtrick/content/resource
 /*skilltable*/
 .ft_skilltablediv { margin-top: 35px; margin-bottom: 35px; margin-left: -10px; overflow: auto; }
 .ft_skilltablediv h2 { cursor: pointer; margin: 10px 0 10px 0 !important; }
-.ft_skilltablediv table { width: 100%; overflow: auto; margin: 0 0 0.5em 0; white-space:nowrap;}
+.ft_skilltablediv table { width: 100%; overflow: auto; margin: 0 0 0.5em 0;}
 .ft_skilltablediv table td:nth-child(even) { background-color: #eeeeee; }
 .ft_skilltablediv table td:nth-child(odd) { background-color: white; }
 .ft_skilltablediv table th { text-align: center !important; }
@@ -55,6 +55,7 @@ h2.ft_boxBodyUnfolded {background-image: url("chrome://foxtrick/content/resource
 .ft_skilltable_customize.customizing .customize_item { display: none; }
 .ft_skilltable_viewcont { background-color: #fff; }
 .ft_skilltable_viewcont.on_top { position: absolute; z-index: 100; padding: 1em; border: 2px solid #888; }
+.ft_skilltable_viewcont.ws_wrap { white-space:nowrap; }
 .ft_skilltable th, .ft_skilltable td { padding: 1px 2px !important; }
 .ft_skilltable th { cursor: pointer; }
 .ft_skilltable td { border-bottom: 1px solid #DCE0DC; border-collapse: separate; }
